# JNP

./: CMakeLists.txt  testuj.sh
jnp1_task2-master/: encstrset.h
zad1/: nod.cc
zad2/: encstrset.cc
zad3/: geometry.cc  geometry.h
zad5/: function_maxima.h
zad7/: bezier.h
